[project]
name = "super-yaya-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.21",
    "boto3>=1.42.17",
    "google-genai>=1.56.0",
    "groq>=1.0.0",
    "huggingface-hub>=1.2.3",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.27.0",
    "streamlit>=1.52.2",
    "tenacity>=9.1.2",
    "yfinance>=1.0",
]
