[project]
name = "super-yaya-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.21",
    "boto3>=1.42.17",
    "ddgs>=9.10.0",
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "groq>=1.0.0",
    "huggingface-hub>=1.2.3",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.4.1",
    "openai>=2.14.0",
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
]
