[project]
name = "super-yaya-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.21",
    "boto3>=1.42.17",
    "ddgs>=9.10.0",
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "groq>=1.0.0",
    "huggingface-hub>=1.2.3",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.4.1",
    "openai>=2.14.0",
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
]

[tool.ruff]
# Target version
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (includes unused imports/variables)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (finds bugs)
    "UP",  # pyupgrade (modernize code)
    "RUF", # Ruff-specific rules
]
ignore = ["F401"] # Ignore unused imports globally for now to avoid breaking __init__.py exports, or fix selectively

# Allow autofix for all enabled rules (when possible)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["invesetment_agent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Set to true later for stricter checks
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
